Revision history for DBD::Oracle

{{$NEXT}}

  [ENHANCEMENTS]
  - DBD-Oracle: Use of uninitialized value $user_only in uc [RT#84657]
    (Steffen Goeldner)  

  [DOCUMENTATION]
  - Bogus 227 directory no longer required for MacOS. (GH#1, patch
    by theory)

1.62      2013-04-30
  - promote 1.61_00 to official release

1.61_00   2013-04-15

  [BUG FIXES]
  - Adjust the privs needed for the DROP/CREATE table test. [GH#35] 
    (Joe Crotty)

  - Fixed RT84170 - when using scrollable cursors and you've done a
    positioned fetch and then keep fetching until the end of the
    result-set calls to fetch never return undef and you keep getting
    the last row forever. Also added test case to the 51scroll.t test
    (Martin J. Evans).

1.60      2013-04-01
 - Move github repository to github.com/pythian/DBD-Oracle.

1.58      2013-03-05
  - promote 1.57_00 to official release

1.57_00   2013-02-07
  [BUG FIXES]

  - fix RT46628 - bind_param_inout ORA_RSET causes MSWin32 access
    violation and RT82663 - Errors if a returned SYS_REFCURSOR is not
    opened (Martin J. Evans)

  - Fix RT82663. If a procedure/function returns a SYS_REFCURSOR which
    was never opened DBD::Oracle magics a DBI statement handle into
    existence and attempts to describe it (which fails). This change
    examines a returned SYS_REFCURSOR and if it it is initialised but
    not executed does not create a DBI statement handle and returns
    undef instead. So now if you have a procedure/function which
    returns a SYS_REFCURSOR and never open it you'll get undef back
    instead of a useless statement handle.  Extended 50cursor.t test
    to check the above fix. (Martin J. Evans)

  [DOCUMENTATION]
  - Update Lion instructions for 64-bit Instant Client. (GH#37, patch by
    theory)

1.56      2013-01-08
  - fix t/26exe_array.t in the case of no db connection (RT82506,
    reported by Peter Rabbitson)

1.54      2013-01-03
 - promote 1.53_00 to official release

1.53_00      2012-12-18
